--- a/src/Static/dendrogram.css
+++ b/src/Static/dendrogram.css
@@ -8,7 +8,11 @@
 }
 
 .dendrogram .text{
-    width: 80px;white-space: nowrap;text-overflow: ellipsis;overflow: hidden;
+    width: 80px;height: 30px;white-space: nowrap;text-overflow: ellipsis;overflow: hidden;display: inline-block;
+}
+
+.dendrogram .text:nth-child(2){
+    border-left: 1px solid #e5e5e5;
 }
 
 .dendrogram-icon{
@@ -33,7 +37,7 @@
     box-sizing: border-box;
     vertical-align: middle;
     font-size: .875rem;
-    line-height: 38px;
+    line-height: 30px;
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
