--- a/src/Static/dendrogram.css
+++ b/src/Static/dendrogram.css
@@ -1,9 +1,9 @@
 .clear_both{
     clear: both;
 }
-
+html{font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;font-size: 14px;}
 .dendrogram{
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     font-size: 12px;
 }
 
