--- a/src/Static/dendrogram.css
+++ b/src/Static/dendrogram.css
@@ -53,8 +53,14 @@ html{font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvet
     border-left:1px solid #c6c6c6;margin-left: 1em;
 }
 
-.dendrogram-adjacency-line{
-    border-top:1px solid #c6c6c6;float: left;width: 30px;margin-left: -30px;margin-top: 20px;
+.dendrogram-adjacency-node:before{
+    display: inline-block;
+    content: "";
+    border-top:1px solid #c6c6c6;
+    float: left;
+    width: 30px;
+    margin-left: -30px;
+    margin-top: 20px;
 }
 
 .dendrogram-adjacency-retract{
