--- a/src/Static/dendrogram.css
+++ b/src/Static/dendrogram.css
@@ -49,8 +49,20 @@ html{font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvet
     border: 1px solid #bababa;
 }
 
+.dendrogram-adjacency-node{
+    position: relative;
+    z-index: 1;
+}
+
 .dendrogram-adjacency-branch{
     border-left:1px solid #c6c6c6;margin-left: 1em;
+    position: relative;
+    top: -20px;
+}
+
+.dendrogram-adjacency-branch>li{
+    position: relative;
+    top: 20px;
 }
 
 .dendrogram-adjacency-node:before{
