--- a/src/Static/dendrogram.css
+++ b/src/Static/dendrogram.css
@@ -123,7 +123,7 @@ html{font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvet
 }
 
 /*nested*/
-.dendrogram-nested ul {
+.dendrogram-nested>ul ul{
     padding: 20px 0 0 0;
     position: relative;
 }
