--- a/src/Static/dendrogram.css
+++ b/src/Static/dendrogram.css
@@ -207,6 +207,140 @@ html{font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvet
     animation-timing-function: ease-out;
 }
 
+#mongolia{
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+    padding: 15px 15px;
+    background: rgba(0,0,0,.6);
+    opacity: 0;
+    transition: opacity .15s linear;
+}
+
+#dendrogram-form{
+    z-index: 10000;
+    position: relative;
+    box-sizing: border-box;
+    margin: 0 auto;
+    width: 600px;
+    max-width: calc(100% - 0.01px) !important;
+    background: #fff;
+    opacity: 0;
+    transform: translateY(-100px);
+    transition: .3s linear;
+    transition-property: opacity,transform;
+}
+
+#dendrogram-form-close{
+    cursor: pointer!important;
+    position: absolute;
+    z-index: 1010;
+    top: 10px;
+    right: 10px;
+    padding: 5px;
+    margin: 0;
+    border: none;
+    border-radius: 0;
+    overflow: visible;
+    font: inherit;
+    color: inherit;
+    text-transform: none;
+    padding: 0;
+    background-color: transparent;
+    display: inline-block;
+    fill: currentcolor;
+    line-height: 0;
+}
+
+.dendrogram-form-header{
+    padding: 15px 30px;
+    background: #fff;
+    border-bottom: 1px solid #e5e5e5;
+}
+
+.dendrogram-form-header h2{
+    font-size: 30px;
+    line-height: 1.3;
+    margin: 0;
+    font-family: ProximaNova,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+    font-weight: 1;
+    color: #222;
+    text-transform: none;
+}
+
+.dendrogram-form-body{
+    padding: 30px;
+}
+
+.dendrogram-form-footer{
+    text-align: right !important;
+    padding: 15px 30px;
+    background: #fff;
+    border-top: 1px solid #e5e5e5;
+}
+
+.dendrogram-form-footer>.delete{
+    cursor: pointer!important;
+    border-radius: 4px;
+    background-color: #F44336;
+    color: #fff!important;
+    border: 1px solid transparent!important;
+    margin: 0;
+    border: none;
+    overflow: visible;
+    font: inherit;
+    color: inherit;
+    text-transform: none;
+    display: inline-block;
+    box-sizing: border-box;
+    padding: 0 30px;
+    vertical-align: middle;
+    font-size: 14px;
+    line-height: 38px;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: .1s ease-in-out;
+    transition-property: color,background-color,border-color;
+}
+
+.dendrogram-form-footer>.delete:hover,.dendrogram-form-footer>.delete:focus{background-color:#ee395b;color:#fff}
+.dendrogram-form-footer>.delete:active{background-color:#ec2147;color:#fff}
+
+.dendrogram-form-footer>.conserve{
+    cursor: pointer!important;
+    border-radius: 4px;
+    background-color: #1e87f0;
+    color: #fff!important;
+    border: 1px solid transparent!important;
+    margin: 0;
+    border: none;
+    overflow: visible;
+    font: inherit;
+    color: inherit;
+    text-transform: none;
+    display: inline-block;
+    box-sizing: border-box;
+    padding: 0 30px;
+    vertical-align: middle;
+    font-size: 14px;
+    line-height: 38px;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: .1s ease-in-out;
+    transition-property: color,background-color,border-color;
+}
+
+.dendrogram-form-footer>.conserve:focus,.dendrogram-form-footer>.conserve:hover{background-color:#0f7ae5;color:#fff}
+.dendrogram-form-footer>.conserve:active{background-color:#0e6dcd;color:#fff}
+
 /*
  * Fade
  */
