--- a/src/Static/dendrogram.css
+++ b/src/Static/dendrogram.css
@@ -251,7 +251,6 @@ html{font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvet
     font: inherit;
     color: inherit;
     text-transform: none;
-    padding: 0;
     background-color: transparent;
     display: inline-block;
     fill: currentcolor;
@@ -287,16 +286,13 @@ html{font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvet
 
 .dendrogram-form-footer>.delete{
     cursor: pointer!important;
-    border-radius: 4px;
-    background-color: #F44336;
+    border-radius: 2px;
+    background-color: #f0506e;
     color: #fff!important;
     border: 1px solid transparent!important;
     margin: 0;
-    border: none;
     overflow: visible;
     font: inherit;
-    color: inherit;
-    text-transform: none;
     display: inline-block;
     box-sizing: border-box;
     padding: 0 30px;
@@ -315,16 +311,13 @@ html{font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvet
 
 .dendrogram-form-footer>.conserve{
     cursor: pointer!important;
-    border-radius: 4px;
+    border-radius: 2px;
     background-color: #1e87f0;
     color: #fff!important;
     border: 1px solid transparent!important;
     margin: 0;
-    border: none;
     overflow: visible;
     font: inherit;
-    color: inherit;
-    text-transform: none;
     display: inline-block;
     box-sizing: border-box;
     padding: 0 30px;
@@ -341,6 +334,34 @@ html{font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvet
 .dendrogram-form-footer>.conserve:focus,.dendrogram-form-footer>.conserve:hover{background-color:#0f7ae5;color:#fff}
 .dendrogram-form-footer>.conserve:active{background-color:#0e6dcd;color:#fff}
 
+.dendrogram-input{
+    margin-top: 0;
+    height: 40px;
+    vertical-align: middle;
+    display: inline-block;
+    max-width: 100%;
+    width: 100%;
+    padding: 0 10px;
+    background: #fff;
+    color: #666;
+    border: 1px solid #e5e5e5;
+    transition: .2s ease-in-out;
+    transition-property: border;
+    box-sizing: border-box;
+    border-radius: 0;
+    font: inherit;
+}
+
+.dendrogram-input:nth-child(n+2){
+    margin-top: 20px;
+}
+
+.dendrogram-input:focus{
+    outline: none;
+    background-color: #fff;
+    color: #666;
+    border-color: #1e87f0;
+}
 /*
  * Fade
  */
