--- a/src/Static/dendrogram.css
+++ b/src/Static/dendrogram.css
@@ -284,7 +284,7 @@ html{font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvet
     border-top: 1px solid #e5e5e5;
 }
 
-.dendrogram-form-footer>.delete{
+.dendrogram-form-delete{
     cursor: pointer!important;
     border-radius: 2px;
     background-color: #f0506e;
@@ -309,7 +309,7 @@ html{font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvet
 .dendrogram-form-footer>.delete:hover,.dendrogram-form-footer>.delete:focus{background-color:#ee395b;color:#fff}
 .dendrogram-form-footer>.delete:active{background-color:#ec2147;color:#fff}
 
-.dendrogram-form-footer>.conserve{
+.dendrogram-form-conserve{
     cursor: pointer!important;
     border-radius: 2px;
     background-color: #1e87f0;
