--- a/src/Static/dendrogram.css
+++ b/src/Static/dendrogram.css
@@ -257,7 +257,7 @@ html{font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvet
 #dendrogram-form{
     z-index: 10000;
     visibility: hidden;
-    position: absolute;
+    position: fixed;
     top: calc(50% - 100px);
     left: calc(50% - 300px);
     box-sizing: border-box;
